--- a/calculator.html
+++ b/calculator.html
@@ -37,6 +37,10 @@
           <i class="fa-solid fa-book"></i>
           <span>Theory</span>
         </a>
+         <a href="insights.html" class="nav-item">
+           <i class="fa-solid fa-lightbulb"></i>
+           <span>Insights</span>
+        </a>  
         <a href="trees.html" class="nav-item">
           <i class="fa-solid fa-tree"></i>
           <span>Trees</span>
@@ -144,6 +148,7 @@
 </html>
       
         
+
 
 
 
