--- a/theory.html
+++ b/theory.html
@@ -125,6 +125,10 @@
           </div>
           <span>Theory</span>
         </a>
+         <a href="insights.html" class="nav-item">
+           <i class="fa-solid fa-lightbulb"></i>
+           <span>Insights</span>
+        </a>
         <a href="trees.html" class="nav-item">
           <i class="fa-solid fa-tree"></i>
           <span>Trees</span>
