--- a/insights.html
+++ b/insights.html
@@ -34,6 +34,12 @@
           <i class="fa-solid fa-book"></i>
           <span>Theory</span>
         </a>
+         <a href="insights.html" class="nav-item">
+           <div class="active-circle">
+              <i class="fa-solid fa-lightbulb"></i>
+           </div>
+           <span>Insights</span>
+        </a>
         <a href="insights.html" class="nav-item active">
           <div class="active-circle"><i class="fa-solid fa-lightbulb"></i></div>
           <span>Insights</span>
