--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
     </section>
 
     <section class="big-glass-box">
-      <h3 style="margin-bottom: 40px; text-align: center; letter-spacing: 2px;">GROUP MEMBERS</h3>
+      <h3 style="margin-bottom: 40px; text-align: center; letter-spacing: 2px;">BEHIND THE IDEA: MEET THE TEAM</h3>
       
       <div class="team-row">
         <div class="member-card">
