--- a/about.html
+++ b/about.html
@@ -189,9 +189,9 @@
         <h4>Azhan Ahmed</h4>
         <span class="role">Project Lead</span>
         <div class="member-contacts">
-          <a href="mailto:azhan@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> azhan@email.com</a>
-          <a href="https://linkedin.com/in/azhan" target="_blank" class="contact-item"><i class="fa-brands fa-linkedin"></i> linkedin.com/azhan</a>
-          <a href="tel:+923001234567" class="contact-item"><i class="fa-solid fa-phone"></i> +92 300 1234567</a>
+          <a href="mailto:azhanahmed2004@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> azhanahmed2004@email.com</a>
+          <a href="linkedin.com/in/azhanahmed20" target="_blank" class="contact-item"><i class="fa-brands fa-linkedin"></i> linkedin.com/in/azhanahmed20</a>
+          <a href="tel:+923308687073" class="contact-item"><i class="fa-solid fa-phone"></i> +92 330 8687073</a>
         </div>
       </div>
 
@@ -204,9 +204,9 @@
         <h4>Muhammad Hamza</h4>
         <span class="role">Researcher</span>
         <div class="member-contacts">
-          <a href="mailto:hamza@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> hamza@email.com</a>
+          <a href="mailto:shaikhhamza01k@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> shaikhhamza01k@email.com</a>
           <a href="#" target="_blank" class="contact-item"><i class="fa-brands fa-linkedin"></i> linkedin.com/hamza</a>
-          <a href="tel:+923000000000" class="contact-item"><i class="fa-solid fa-phone"></i> +92 300 0000000</a>
+          <a href="tel:+923102854234" class="contact-item"><i class="fa-solid fa-phone"></i> +92 310 2854234</a>
         </div>
       </div>
 
@@ -219,9 +219,9 @@
         <h4>Varindher Kumar</h4>
         <span class="role">Env. Analyst</span>
         <div class="member-contacts">
-          <a href="mailto:kumar@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> kumar@email.com</a>
+          <a href="mailto:varindherkumar@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> varindherkumar@email.com</a>
           <a href="#" target="_blank" class="contact-item"><i class="fa-brands fa-linkedin"></i> linkedin.com/kumar</a>
-          <a href="tel:+923000000000" class="contact-item"><i class="fa-solid fa-phone"></i> +92 300 0000000</a>
+          <a href="tel:+923330038121" class="contact-item"><i class="fa-solid fa-phone"></i> +92 333 0038121</a>
         </div>
       </div>
 
@@ -234,9 +234,9 @@
         <h4>Khizer Waseem</h4>
         <span class="role">Data Scientist</span>
         <div class="member-contacts">
-          <a href="mailto:khizer@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> khizer@email.com</a>
+          <a href="mailto:khizerwaseem@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> khizerwaseem@email.com</a>
           <a href="#" target="_blank" class="contact-item"><i class="fa-brands fa-linkedin"></i> linkedin.com/khizer</a>
-          <a href="tel:+923000000000" class="contact-item"><i class="fa-solid fa-phone"></i> +92 300 0000000</a>
+          <a href="tel:+923182465919" class="contact-item"><i class="fa-solid fa-phone"></i> +92 318 2465919</a>
         </div>
       </div>
     </div>
