--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
         <span class="role">Project Lead</span>
         <div class="member-contacts">
           <a href="mailto:azhanahmed2004@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> azhanahmed2004@email.com</a>
-          <a href="linkedin.com/in/azhanahmed20" target="_blank" class="contact-item"><i class="fa-brands fa-linkedin"></i> linkedin.com/in/azhanahmed20</a>
+          <a href="https://www.linkedin.com/in/azhanahmed20" target="_blank" class="contact-item"><i class="fa-brands fa-linkedin"></i> https://www.linkedin.com/in/azhanahmed20</a>
           <a href="tel:+923308687073" class="contact-item"><i class="fa-solid fa-phone"></i> +92 330 8687073</a>
         </div>
       </div>
