--- a/trees.html
+++ b/trees.html
@@ -139,7 +139,7 @@
   <main>
     <section class="container">
       <h2>Urban Trees & Carbon Sequestration</h2>
-      <p>This page summarizes tree species and sequestration values compiled from local studies (Bano et al., Shehzad et al., Pakistan Journal of Botany) specifically for the climate of Karachi.</p>
+      <p>This page summarizes tree species and sequestration values specifically for Karachi’s climate. These figures are aggregated from local research by Bano et al. (2023), Shehzad et al., and Ajani & Shams (2016), whose work is foundational to the Pakistan Journal of Botany and other local archives. Annual absorption rates are derived from the total carbon stock and biomass data provided in these academically verified studies.</p>
 
       <table class="data">
         <thead>
