--- a/trees.html
+++ b/trees.html
@@ -187,6 +187,28 @@
               </a>
           </div>
       </div>
+      <div class="strategy-box">
+        <h4><i class="fa-solid fa-bullseye"></i> How to use the Map for Net Zero</h4>
+        <p>To reach <strong>Net Zero</strong>, we calculate the trees needed to cancel your generator's carbon. But <em>where</em> you plant them determines their "Double-Benefit."</p>
+  
+        <div class="benefit-grid">
+          <div class="benefit-item">
+            <strong>1. The Heat Trap (Grey Areas)</strong>
+            <p>Areas like Saddar or Federal B Area are covered in concrete. These act like "Heat Traps" because they absorb the sun's energy all day and stay hot all night.</p>
+          </div>
+          <div class="benefit-item">
+            <strong>2. The Double-Benefit</strong>
+            <p>Planting your "Net Zero" trees in these grey areas solves two problems: the trees breathe in the CO₂ your generator breathes out, and the leaves provide shade that stops the concrete from heating up.</p>
+          </div>
+        </div>
+
+        <div class="action-callout">
+          <strong><i class="fa-solid fa-satellite"></i> Actionable Step:</strong>
+          Use the <strong>live map attached below</strong> and switch it to <strong>"Satellite View"</strong>. If your neighborhood looks mostly Grey (lots of roofs and roads), your trees are <strong>Priority One</strong>—they work double-time to clean your air and cool your street.
+        </div>
+      </div>
+
+      
 
       <section class="map-section">
         <h3>Karachi Priority Planting Map</h3>
