--- a/calculator.html
+++ b/calculator.html
@@ -63,7 +63,8 @@
         <h3>Step 1 — Diesel generator</h3>
         <label>Generator Power (kW) <input id="genPower" type="number" value="0"></label>
         <label>Operating Hours/day <input id="hours" type="number" value="0"></label>
-        <label><input id="fuelEff" type="number" placeholder="e.g. 15" step="0.1"></label>
+        <label>Total Diesel Consumed per Day (Liters) <input id="dailyLiters" type="number" placeholder="e.g. 15" step="0.1"></label>
+        <label>Calculated Efficiency (L/hour) <input id="calcEfficiency" type="number" readonly style="background:#f0f0f0;"></label>
         <label>Diesel Price (PKR/L) <input id="dieselPrice" type="number" value="265.65"></label>
         <label>CO₂ Factor (kg/L) <input id="co2Factor" type="number" value="2.68" step="0.01"></label>
 
@@ -148,6 +149,7 @@
 </html>
       
         
+
 
 
 
