--- a/about.html
+++ b/about.html
@@ -180,66 +180,76 @@
       <h3 style="margin-bottom: 40px; text-align: center; letter-spacing: 2px;">BEHIND THE IDEA: MEET THE TEAM</h3>
       
       <div class="team-row">
-      <div class="member-card">
-        <div class="member-image-wrapper">
-          <div class="member-number">01</div>
-          <img src="azhan.jpeg" alt="Azhan Ahmed" class="member-img">
-          <div class="arc arc-1"></div>
+        <div class="member-card">
+          <div class="member-image-wrapper">
+            <div class="member-number">01</div>
+            <img src="azhan.jpeg" alt="Azhan Ahmed" class="member-img">
+            <div class="arc arc-1"></div>
+          </div>
+          <h4>Azhan Ahmed</h4>
+          <span class="role">Project Lead</span>
+          <div class="member-contacts">
+            <a href="mailto:azhanahmed2004@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> Email</a>
+            <a href="tel:+923308687073" class="contact-item"><i class="fa-solid fa-phone"></i> +92 330 8687073</a>
+            <a href="https://www.linkedin.com/in/azhanahmed20" target="_blank" class="linkedin-btn">
+              <i class="fa-brands fa-linkedin"></i> View Profile
+            </a>
+          </div>
         </div>
-        <h4>Azhan Ahmed</h4>
-        <span class="role">Project Lead</span>
-        <div class="member-contacts">
-          <a href="mailto:azhanahmed2004@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> azhanahmed2004@email.com</a>
-          <a href="https://www.linkedin.com/in/azhanahmed20" target="_blank" class="contact-item"><i class="fa-brands fa-linkedin"></i> https://www.linkedin.com/in/azhanahmed20</a>
-          <a href="tel:+923308687073" class="contact-item"><i class="fa-solid fa-phone"></i> +92 330 8687073</a>
-        </div>
-      </div>
 
-      <div class="member-card">
-        <div class="member-image-wrapper">
-          <div class="member-number">02</div>
-          <img src="hamza.jpeg" alt="Muhammad Hamza" class="member-img">
-          <div class="arc arc-2"></div>
-        </div>
-        <h4>Muhammad Hamza</h4>
-        <span class="role">Researcher</span>
-        <div class="member-contacts">
-          <a href="mailto:shaikhhamza01k@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> shaikhhamza01k@email.com</a>
-          <a href="https://www.linkedin.com/in/muhammad-hamza-shaikh-a9443325b" target="_blank" class="contact-item"><i class="fa-brands fa-linkedin"></i> https://www.linkedin.com/in/in/muhammad-hamza-shaikh-a9443325b</a>
-          <a href="tel:+923102854234" class="contact-item"><i class="fa-solid fa-phone"></i> +92 310 2854234</a>
-        </div>
-      </div>
-
-      <div class="member-card">
-        <div class="member-image-wrapper">
-          <div class="member-number">03</div>
-          <img src="kumar.jpeg" alt="Varindher Kumar" class="member-img">
-          <div class="arc arc-3"></div>
-        </div>
-        <h4>Varindher Kumar</h4>
-        <span class="role">Env. Analyst</span>
-        <div class="member-contacts">
-          <a href="mailto:varindherkumar@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> varindherkumar@email.com</a>
-          <a href="https://www.linkedin.com/in/varindher-kumar-ba2893242" target="_blank" class="contact-item"><i class="fa-brands fa-linkedin"></i> https://www.linkedin.com/in/varindher-kumar-ba2893242</a>
-          <a href="tel:+923330038121" class="contact-item"><i class="fa-solid fa-phone"></i> +92 333 0038121</a>
-        </div>
-      </div>
-
-      <div class="member-card">
-        <div class="member-image-wrapper">
-          <div class="member-number">04</div>
-          <img src="khizer.jpeg" alt="Khizar Waseem" class="member-img">
-          <div class="arc arc-4"></div>
-        </div>
-        <h4>Khizar Waseem</h4>
-        <span class="role">Data Scientist</span>
-        <div class="member-contacts">
-          <a href="mailto:khizarwaseem05@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> khizarwaseem05@email.com</a>
-          <a href="https://www.linkedin.com/in/khizarwaseem05" target="_blank" class="contact-item"><i class="fa-brands fa-linkedin"></i> https://www.linkedin.com/in/khizarwaseem05</a>
-          <a href="tel:+923182465919" class="contact-item"><i class="fa-solid fa-phone"></i> +92 318 2465919</a>
-        </div>
-      </div>
+        <div class="member-card">
+    <div class="member-image-wrapper">
+      <div class="member-number">02</div>
+      <img src="hamza.jpeg" alt="Muhammad Hamza" class="member-img">
+      <div class="arc arc-2"></div>
     </div>
+    <h4>Muhammad Hamza</h4>
+    <span class="role">Researcher</span>
+    <div class="member-contacts">
+      <a href="mailto:shaikhhamza01k@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> Email</a>
+      <a href="tel:+923102854234" class="contact-item"><i class="fa-solid fa-phone"></i> +92 310 2854234</a>
+      <a href="https://www.linkedin.com/in/muhammad-hamza-shaikh-a9443325b" target="_blank" class="linkedin-btn">
+        <i class="fa-brands fa-linkedin"></i> View Profile
+      </a>
+    </div>
+  </div>
+
+  <div class="member-card">
+    <div class="member-image-wrapper">
+      <div class="member-number">03</div>
+      <img src="kumar.jpeg" alt="Varindher Kumar" class="member-img">
+      <div class="arc arc-3"></div>
+    </div>
+    <h4>Varindher Kumar</h4>
+    <span class="role">Env. Analyst</span>
+    <div class="member-contacts">
+      <a href="mailto:varindherkumar@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> Email</a>
+      <a href="tel:+923330038121" class="contact-item"><i class="fa-solid fa-phone"></i> +92 333 0038121</a>
+      <a href="https://www.linkedin.com/in/varindher-kumar-ba2893242" target="_blank" class="linkedin-btn">
+        <i class="fa-brands fa-linkedin"></i> View Profile
+      </a>
+    </div>
+  </div>
+
+  <div class="member-card">
+    <div class="member-image-wrapper">
+      <div class="member-number">04</div>
+      <img src="khizer.jpeg" alt="Khizar Waseem" class="member-img">
+      <div class="arc arc-4"></div>
+    </div>
+    <h4>Khizar Waseem</h4>
+    <span class="role">Data Scientist</span>
+    <div class="member-contacts">
+      <a href="mailto:khizarwaseem05@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> Email</a>
+      <a href="tel:+923182465919" class="contact-item"><i class="fa-solid fa-phone"></i> +92 318 2465919</a>
+      <a href="https://www.linkedin.com/in/khizarwaseem05" target="_blank" class="linkedin-btn">
+        <i class="fa-brands fa-linkedin"></i> View Profile
+      </a>
+    </div>
+  </div>
+</div>
+
+
     </section>
 
     <section style="text-align: center; margin-top: 40px;">
