--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@
             <div class="arc arc-1"></div>
           </div>
           <h4>Azhan Ahmed</h4>
-          <span class="role">Project Lead Technical Developer</span>
+          <span class="role">Project Lead & Developer</span>
           <div class="member-contacts">
             <a href="mailto:azhanahmed2004@email.com" class="contact-item"><i class="fa-solid fa-envelope"></i> Email</a>
             <a href="tel:+923308687073" class="contact-item"><i class="fa-solid fa-phone"></i> +92 330 8687073</a>
