--- a/calculator.html
+++ b/calculator.html
@@ -252,7 +252,7 @@
 
                 <div class="impact-info">
 
-                    <p>Trees required to reach Net Zero"</p>
+                    <p>Trees required to reach Net Zero</p>
 
                     <h2 id="tree-count-hero">0</h2>
 
@@ -305,6 +305,7 @@
 
 
 </html>
+
 
 
 
