--- a/insights.html
+++ b/insights.html
@@ -79,7 +79,7 @@
 
         <div class="insight-grid">
             <article class="theory-card">
-                <div class="card-img"><img src="diesel_dynamics.jpg" alt="Diesel Dynamics"></div>
+                <div class="card-img"><img src="diesel_dynamics.png" alt="Diesel Dynamics"></div>
                 <div class="card-body">
                     <div class="topic-tag">Diesel Dynamics</div>
                     <h3>Invisible Smoke</h3>
@@ -88,7 +88,7 @@
             </article>
 
             <article class="theory-card">
-                <div class="card-img"><img src="energy_gap.jpg" alt="Energy Gap"></div>
+                <div class="card-img"><img src="energy_gap.png" alt="Energy Gap"></div>
                 <div class="card-body">
                     <div class="topic-tag">Energy Gap</div>
                     <h3>The Backup Trap</h3>
@@ -97,7 +97,7 @@
             </article>
 
             <article class="theory-card">
-                <div class="card-img"><img src="solar_impact.jpg" alt="Solar Impact"></div>
+                <div class="card-img"><img src="solar_impact.png" alt="Solar Impact"></div>
                 <div class="card-body">
                     <div class="topic-tag">Solar Impact</div>
                     <h3>Harvesting Light</h3>
@@ -124,7 +124,7 @@
             </article>
 
             <article class="theory-card">
-                <div class="card-img"><img src="net_zero.jpg" alt="Net Zero"></div>
+                <div class="card-img"><img src="net_zero.png" alt="Net Zero"></div>
                 <div class="card-body">
                     <div class="topic-tag">Net Zero</div>
                     <h3>The Clean Balance</h3>
