--- a/insights.html
+++ b/insights.html
@@ -79,7 +79,7 @@
 
         <div class="insight-grid">
             <article class="theory-card">
-                <div class="card-img"><img src="diesel_dynamics.png" alt="Diesel Dynamics"></div>
+                <div class="card-img"><img src="diesel_dynamics.jpg" alt="Diesel Dynamics"></div>
                 <div class="card-body">
                     <div class="topic-tag">Diesel Dynamics</div>
                     <h3>Invisible Smoke</h3>
